fix: font and spacing for homepage - desktop

--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -9,7 +9,7 @@
         position: fixed;
         transform-origin: top left;
         z-index: 1;
-        left: 80px;
+        left: 6.5rem;
         top: 0;
         transform: rotate(90deg);
         width: 100vh;
@@ -80,9 +80,12 @@
 
 
     @include utils.mQ(64rem) {
-        min-width: 5rem;
-        min-height: 5rem;
+        min-width: 6.5rem;
+        min-height: 6.5rem;
         border-radius: 0 20px 0 0;
+        &::before {           
+            border-radius: 20px 0 0 0;
+        }
     }
 }
 
