--- a/src/sass/layouts/_main.scss
+++ b/src/sass/layouts/_main.scss
@@ -15,7 +15,7 @@
 
     @include utils.mQ(64rem) {
         margin-block: 0;
-        padding-block: 2.5rem
+        padding-block: calc(base.$spacer2 * 3)
     }
 }
 
